<resources>
    <string name="app_name">PicPay Clone kt</string>
    <string name="title_home">Home</string>
    <string name="title_pagar">Pagar</string>
    <string name="title_ajustes">Ajustes</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_placeholder">login</string>
    <string name="nome_completo_do_usuario">Nome Completo do Usuario</string>
    <string name="zero_reais">R$ 0,00</string>
    <string name="saldo">Saldo</string>
    <string name="cartao_de_credito">Cartão de crédito</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="nome_do_titular">Nome do titular</string>
    <string name="validade">Validade</string>
    <string name="cvc">CVC</string>
    <string name="transferencia">Transferência</string>
    <string name="usuario_hint">Usuário</string>
    <string name="joaovf">joaovf</string>
    <string name="senha">Senha</string>
    <string name="contatos">Contatos:</string>
    <string name="entrar">Entrar</string>
    <string name="picpay_logo_description">logo da empresa PicPay</string>
    <string name="user_icon_description">icone de um usuario</string>
    <string name="atividade">Atividade:</string>
    <string name="seu_saldo">Seu saldo:</string>
    <string name="data_hora_placeholder">2021-01-01 00:000:00</string>
    <string name="usuariodestino">usuariodestino</string>
    <string name="pagou">pagou</string>
    <string name="usuarioorigem">usuarioorigem</string>
    <string name="meu_email">Meu email</string>
    <string name="meu_numero">Meu número</string>
    <string name="meu_picpay">Meu PicPay</string>
    <string name="email_placeholder">email@servidor.com</string>
</resources>