<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.chicorialabs.coriapaykt.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pagar"
        android:name="br.com.chicorialabs.coriapaykt.ui.pagar.PagarFragment"
        android:label="@string/title_pagar"
        tools:layout="@layout/fragment_pagar" >
        <action
            android:id="@+id/action_navigation_pagar_to_transacaoFragment"
            app:destination="@id/transacaoFragment"
            app:popUpTo="@id/navigation_pagar"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ajustes"
        android:name="br.com.chicorialabs.coriapaykt.ui.ajustes.AjustesFragment"
        android:label="@string/title_ajustes"
        tools:layout="@layout/fragment_ajustes" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="br.com.chicorialabs.coriapaykt.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/transacaoFragment"
        android:name="br.com.chicorialabs.coriapaykt.ui.transacao.TransacaoFragment"
        android:label="fragment_transacao"
        tools:layout="@layout/fragment_transacao" >
        <action
            android:id="@+id/action_transacaoFragment_to_navigation_pagar"
            app:destination="@id/navigation_pagar"
            app:popUpTo="@id/navigation_pagar"
            app:popUpToInclusive="true" />
        <argument android:name="usuario"
            app:argType="br.com.chicorialabs.coriapaykt.data.Usuario" />
    </fragment>

</navigation>