<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="br.com.chicorialabs.picpayclonekt.ui.login.LoginViewModel" />
<!--        <import type="br.com.chicorialabs.picpayclonekt.data.Usuario"/>-->
        <variable
            name="ajustesViewModel"
            type="br.com.chicorialabs.picpayclonekt.ui.ajustes.AjustesViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ajustes.AjustesFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/rectangle"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ajustes_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_iconfinder_icons_user2_1564535"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ajustes_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ajustesViewModel.usuario.login}"
            tools:text="@string/login_placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ajustes_icon"
            app:layout_constraintVertical_bias="0.35"
            />

        <LinearLayout
            android:id="@+id/ajustes_linear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meu_picpay"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ajustes_meupicpay_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ajustesViewModel.usuario.login}"
                tools:text="@string/login_placeholder"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/meu_numero"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ajustes_meunumero_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="(41)-11111-2222"
                android:text="@{ajustesViewModel.usuario.numeroTelefone}"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/meu_email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ajustes_meuemail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/email_placeholder"
                android:text="@{ajustesViewModel.usuario.email}"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ajustes_sair_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Sair"
                android:textColor="@android:color/holo_red_dark"
                app:strokeColor="@android:color/holo_red_dark"
                android:onClick="@{ () -> loginViewModel.onLogoff() }"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
